--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     password: Alice1972!
     url: jdbc:postgresql://localhost:6969/registration
-    username:
+    username: postgres
   jpa:
     hibernate:
       ddl-auto: create-drop
